--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
       <section class="intro">
         <h2 class="subheading">Давайте познакомимся</h2>
         <h3>Пара слов о себе</h3>
-        <p>Текст с парой слов о себе.</p>
+        <p>Люблю ходить в KFC</p>
         <h3>Чем могу быть полезен</h3>
-        <p>Текст о том, чем могу быть полезен.</p>
+        <p>Сделаю верстку сайта быстро и качественно</p>
       </section>
   
       <section class="portfolio">
