--- a/index.html
+++ b/index.html
@@ -14,30 +14,41 @@
       </div>
     </header>
 
-    <div class="container">
       <section class="hero-image">
-        <h1 class="heading">Илья</h1>
-        <p>Junior верстальщик</p>
+        <div class="container">
+          <h1 class="heading">Илья</h1>
+          <p>Junior верстальщик</p>
+        </div>
       </section>
   
       <section class="intro">
-        <h2 class="subheading">Давайте познакомимся</h2>
-        <h3>Пара слов о себе</h3>
-        <p>Люблю ходить в KFC</p>
-        <h3>Чем могу быть полезен</h3>
-        <p>Сделаю верстку сайта быстро и качественно</p>
+        <div class="container">
+          <h2 class="subheading">Давайте познакомимся</h2>
+          <figure class="user-image">
+            <img src="files/user.jpg" width="928" height="536" alt="Фотография Неопознанного Енота">
+          </figure>
+          <h3>Пара слов о себе</h3>
+          <p>Люблю ходить в KFC</p>
+          <h3>Чем могу быть полезен</h3>
+          <p>Сделаю верстку сайта быстро и качественно</p>
+        </div>
       </section>
   
       <section class="portfolio">
-        <h2 class="subheading">Мои работы</h2>
+        <div class="container">
+          <h2 class="subheading">Мои работы</h2>
+          <figure class="project-image">
+            <img src="files/project.jpg" width="928" height="536" alt="Cайт магазина товаров для дома">
+          </figure>
+          <a class="button" href="source/project-gloevk/index.html">Открыть страницу</a>
   
-        <h3>Магазин товаров для дома</h3>
-        <p>Мой первый сайт.</p>
-  
-        <h3>Блог начинающего верстальщика</h3>
-        <p>Статический блог про обучение HTML и CSS.</p>
+          <h3>Магазин товаров для дома</h3>
+          <p>Мой первый сайт.</p>
+    
+          <h3>Блог начинающего верстальщика</h3>
+          <p>Статический блог про обучение HTML и CSS.</p>
+        </div>
       </section>
-    </div>
 
     <footer class="page-footer">
       <div class="container">
