--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		<div class="container">
 			<h2 class="subheading">Давайте познакомимся</h2>
 			<figure class="user-image">
-				<img src="files/photo.jpg" width="928" height="536" alt="Фотография Неопознанного Енота">
+				<img src="files/photo.jpg" width="928" height="536" alt="">
 			</figure>
 			<div class="about">
 				<h3>Пара слов о себе</h3>
