--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 	<section class="intro">
 		<div class="container">
 			<h2 class="subheading">Давайте познакомимся</h2>
-			<figure class="user-image">
+			<figure class="user-image" style="display:none">
 				<img src="files/photo.jpg" width="928" height="536" alt="">
 			</figure>
 			<div class="about">
