--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
 	<header class="page-header">
 		<div class="container">
 			<a href="mailto:ilvlagad@gmail.com" class="header-email">ilvlagad@gmail.com</a>
-			<a href="tel:+79043576185" class="header-phone">+79043576185</a>
 		</div>
 	</header>
 
@@ -60,11 +59,11 @@
 			<div class="portfolio-flex">
 				<div class="portfolio-item">
 					<figure class="project-image">
-						<a target="_blank" href="source/Explore and Travel/index.html">
-							<img src="files/project-1.png" width="928" height="536" alt="">
+						<a target="_blank" href="source/explore-travel/index.html">
+							<img src="files/explore-travel.png" width="928" height="536" alt="">
 						</a>
 					</figure>
-					<h3>Лендинг Explore and Travel</h3>
+					<h3>Explore and Travel</h3>
 					<a target="_blank" class="button" href="source/Explore and Travel/index.html">Открыть страницу</a>
 				</div>
 
@@ -74,17 +73,17 @@
 							<img src="files/project-2.png" width="928" height="536" alt="">
 						</a>
 					</figure>
-					<h3>Лендинг ItAgency</h3>
+					<h3>ItAgency</h3>
 					<a target="_blank" class="button" href="source/ItAgency/index.html">Открыть страницу</a>
 				</div>
 
 				<div class="portfolio-item">
 					<figure class="project-image">
-						<a target="_blank" href="source/Logoipsim/layout/index.html">
-							<img src="files/project-3.png" width="928" height="536" alt="">
+						<a target="_blank" href="source/logoipsum/index.html">
+							<img src="files/logoipsum.png" width="928" height="536" alt="">
 						</a>
 					</figure>
-					<h3>Лендинг Logoipsum</h3>
+					<h3>Logoipsum</h3>
 					<a target="_blank" class="button" href="source/Logoipsim/layout/index.html">Открыть страницу</a>
 				</div>
 
@@ -94,7 +93,7 @@
 							<img src="files/project-4.png" width="928" height="536" alt="">
 						</a>
 					</figure>
-					<h3>Лендинг Lugar</h3>
+					<h3>Lugar</h3>
 					<a target="_blank" class="button" href="source/Lugar/index.html">Открыть страницу</a>
 				</div>
 
@@ -116,7 +115,6 @@
 	<footer class="page-footer">
 		<div class="container">
 			<a href="mailto:ilvlagad@gmail.com" class="footer-email">ilvlagad@gmail.com</a>
-			<a href="tel:+79043576185" class="header-phone">+79043576185</a>
 		</div>
 	</footer>
 </body>
