--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 	<section class="intro">
 		<div class="container">
 			<h2 class="subheading">Давайте познакомимся</h2>
-			<figure class="user-image" style="display:none">
-				<img src="files/photo.jpg" width="928" height="536" alt="">
+			<figure class="user-image">
+				<img src="img/developer.svg" width="928" height="536" alt="">
 			</figure>
 			<div class="about">
 				<h3>Пара слов о себе</h3>
