--- a/index.html
+++ b/index.html
@@ -59,52 +59,56 @@
 			<div class="portfolio-flex">
 				<div class="portfolio-item">
 					<figure class="project-image">
-						<a target="_blank" href="source/explore-travel/index.html">
+						<a target="_blank" href="https://iphone-cell.github.io/explore-travel-ru/">
 							<img src="files/explore-travel.png" width="928" height="536" alt="">
 						</a>
 					</figure>
 					<h3>Explore and Travel</h3>
-					<a target="_blank" class="button" href="source/Explore and Travel/index.html">Открыть страницу</a>
+					<a target="_blank" class="button" href="https://iphone-cell.github.io/explore-travel-ru/">Открыть
+						страницу</a>
 				</div>
 
 				<div class="portfolio-item">
 					<figure class="project-image">
-						<a target="_blank" href="source/ItAgency/index.html">
+						<a target="_blank" href="https://iphone-cell.github.io/itagency/">
 							<img src="files/project-2.png" width="928" height="536" alt="">
 						</a>
 					</figure>
 					<h3>ItAgency</h3>
-					<a target="_blank" class="button" href="source/ItAgency/index.html">Открыть страницу</a>
+					<a target="_blank" class="button" href="https://iphone-cell.github.io/itagency/">Открыть
+						страницу</a>
 				</div>
 
 				<div class="portfolio-item">
 					<figure class="project-image">
-						<a target="_blank" href="source/logoipsum/index.html">
+						<a target="_blank" href="https://iphone-cell.github.io/logoipsum-ru/">
 							<img src="files/logoipsum.png" width="928" height="536" alt="">
 						</a>
 					</figure>
 					<h3>Logoipsum</h3>
-					<a target="_blank" class="button" href="source/Logoipsim/layout/index.html">Открыть страницу</a>
+					<a target="_blank" class="button" href="https://iphone-cell.github.io/logoipsum-ru/">Открыть
+						страницу</a>
 				</div>
 
 				<div class="portfolio-item">
 					<figure class="project-image">
-						<a target="_blank" href="source/Lugar/index.html">
+						<a target="_blank" href="https://iphone-cell.github.io/lugar/">
 							<img src="files/project-4.png" width="928" height="536" alt="">
 						</a>
 					</figure>
 					<h3>Lugar</h3>
-					<a target="_blank" class="button" href="source/Lugar/index.html">Открыть страницу</a>
+					<a target="_blank" class="button" href="https://iphone-cell.github.io/lugar/">Открыть страницу</a>
 				</div>
 
 				<div class="portfolio-item">
 					<figure class="project-image">
-						<a target="_blank" href="source/Storelink/index.html">
+						<a target="_blank" href="https://iphone-cell.github.io/storelink/">
 							<img src="files/project-5.png" width="928" height="536" alt="">
 						</a>
 					</figure>
 					<h3>Интернет-магазин Storelink</h3>
-					<a target="_blank" class="button" href="source/Storelink/index.html">Открыть страницу</a>
+					<a target="_blank" class="button" href="https://iphone-cell.github.io/storelink/">Открыть
+						страницу</a>
 				</div>
 
 			</div>
