--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 	<header class="page-header">
 		<div class="container">
-			<a href="mailto:ilvlagad@gmail.com" class="header-email">ilvlagad@gmail.com</a>
+			<a href="https://t.me/ilya_221" class="header-email">Telegram</a>
 		</div>
 	</header>
 
@@ -92,22 +92,22 @@
 
 				<div class="portfolio-item">
 					<figure class="project-image">
-						<a target="_blank" href="https://iphone-cell.github.io/lugar/">
-							<img src="files/project-4.png" width="928" height="536" alt="">
+						<a target="_blank" href="https://iphone-cell.github.io/barcelona/">
+							<img src="files/new/1.jpg" width="928" height="536" alt="">
 						</a>
 					</figure>
-					<h3>Lugar</h3>
-					<a target="_blank" class="button" href="https://iphone-cell.github.io/lugar/">Открыть страницу</a>
+					<h3>Barcelona</h3>
+					<a target="_blank" class="button" href="https://iphone-cell.github.io/barcelona/">Открыть страницу</a>
 				</div>
 
 				<div class="portfolio-item">
 					<figure class="project-image">
-						<a target="_blank" href="https://iphone-cell.github.io/storelink/">
-							<img src="files/project-5.png" width="928" height="536" alt="">
+						<a target="_blank" href="https://iphone-cell.github.io/aquachief/">
+							<img src="files/new/2.jpg" width="928" height="536" alt="">
 						</a>
 					</figure>
-					<h3>Интернет-магазин Storelink</h3>
-					<a target="_blank" class="button" href="https://iphone-cell.github.io/storelink/">Открыть
+					<h3>Aquachief</h3>
+					<a target="_blank" class="button" href="https://iphone-cell.github.io/aquachief/">Открыть
 						страницу</a>
 				</div>
 
@@ -118,7 +118,7 @@
 
 	<footer class="page-footer">
 		<div class="container">
-			<a href="mailto:ilvlagad@gmail.com" class="footer-email">ilvlagad@gmail.com</a>
+			<a href="https://t.me/ilya_221" class="footer-email">Telegram</a>
 		</div>
 	</footer>
 </body>
